fix text alignment in rules

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1197,6 +1197,7 @@ a {
 }
 .cid-sezO5vnM8b .mbr-text {
   color: #bbbbbb;
+  text-align: right;
 }
 .cid-sezO5vnM8b .cost {
   color: #bbbbbb;
